argocd/base/resources/dashboard-ingr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: traefik-error-pages
          namespace: traefik
  tls:
    secretName: argocd-dashboard-tls
