argocd/base/resources/ingr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      services:
        - name: argocd-server
          port: http
      middlewares:
        - name: traefik-error-pages
          namespace: traefik
  tls:
    secretName: argocd-tls
