argocd/base/resources/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      services:
        - name: argocd-server
          port: 80
